# EzPay

./: CONTRIBUTING.md  README.md
backend/: .env.example  Cargo.toml  tsconfig.json
backend/src/: main.rs
backend/src/config/: database.rs  mod.rs
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/register/: page.tsx
frontend/app/success/: page.tsx
frontend/components/landing/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx
frontend/components/register/: EmbeddedWalletSetup.tsx  StepOne.tsx  StepTwo.tsx  WalletConnect.tsx
frontend/hooks/: use-toast.ts
frontend/lib/: registrationStore.ts  stellar.ts  walletStore.ts
smart-contract/: Cargo.toml
smart-contract/src/: lib.rs
