[package]
name = "ezpay_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros", "signal"] }
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
anyhow = "1.0.86"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
deadpool-postgres = "0.14.0"
tokio-postgres = "0.7.11"
deadpool = "0.12.1"

[profile.release]
lto = true
codegen-units = 1
